--- a/docassemble/VTFeeWaiver/data/questions/VT_fee_waiver.yml
+++ b/docassemble/VTFeeWaiver/data/questions/VT_fee_waiver.yml
@@ -2038,7 +2038,9 @@ review:
       
       **Is in this court division**: ${ trial_court.division_abbr }
       
+      % if trial_court_division == "Civil" or trial_court_division == "Criminal":
       **Is in this county**: ${( trial_court.address.county )} County
+      % endif
 
   - Edit: docket_number
     button: |
@@ -2317,7 +2319,7 @@ attachments:
             % elif trial_court_division == "Judicial Bureau":
               
             % else:
-            ${ trial_court.address.county }
+            ${ trial_court.address.county } County
             % endif
         - "court_division": ${ trial_court.division_abbr }
         - "name": ${ trial_court }
